<resources>
    <string name="app_name">Sprint 2</string>
    <string name="titulo">Formulario IMC</string>
    <string name="ingrese_estatura">Ingrese Su Estatura En Centimetros</string>
    <string name="ingrese_peso">Ingrese Su Peso En Kilogramos</string>
    <string name="btn">Calcular</string>
    <string name="texto_resultado">Su IMC Corporal Es De:</string>
    <string name="nombre">Ingrese Su Nombre:</string>
    <string name="res_lista">Registros Anteriores</string>
    <string name="imc_register">Su IMC fue:</string>
    <string name="input_clave">Ingrese su contraseña</string>
    <string name="input_user">Ingrese su usuario</string>
    <string name="login">Iniciar Sesión</string>
    <string name="btn_login">Entrar</string>
</resources>