<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/outline_spa_24"
        android:background="#669bbc"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="4dp"
        android:fontFamily="@font/fredoka_one"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/titulo"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre" />

        <EditText
            android:id="@+id/textNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingrese_estatura" />

        <EditText
            android:id="@+id/textEstatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingrese_peso" />

        <EditText
            android:id="@+id/textPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one"
            android:gravity="center_horizontal"
            android:text="@string/texto_resultado"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textIMC"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="#669bbc"
            android:gravity="center_horizontal"
            android:text=""
            android:textSize="22sp" />
        <Button
            android:id="@+id/boton_calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#006d77"
            android:fontFamily="@font/fredoka_one"
            android:padding="12dp"
            android:layout_marginVertical="5dp"
            android:text="@string/btn"
            android:textSize="20sp"
            app:cornerRadius="200sp" />
        <TextView
            android:id="@+id/textLista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one"
            android:gravity="center_horizontal"
            android:text="@string/res_lista"
            android:textSize="25sp"
            android:textColor="#669bbc"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lista_contactos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>